# crypto_etl

./: Dockerfile  README.md  docker-compose.yml  metabase_dump.sql  past_crawler.py  pyproject.toml  setup.sql  users.xml
bit/: io_config.yaml  metadata.yaml
bit/data_exporters/: export_ohlc_to_clickhouse.py  export_transactions_to_clickhouse.py
bit/data_loaders/: fetch_ohlc.py  fetch_trading_pairs_info.py  fetch_transactions.py
bit/pipelines/bitstamp_pipeline/: metadata.yaml
bit/transformers/: remove_extra_trading_info.py
src/crypto_etl/: crawler_scripts.py
